kubernetes/apps/monitoring/webmin/k8s-2/app/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: k8s-2
  namespace: monitoring
subsets:
- addresses:
  - ip: 192.168.1.121
  ports:
  - name: k8s-2
    port: 10000
    protocol: TCP
