kubernetes/apps/monitoring/webmin/k8s-2/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-2
  namespace: monitoring
  annotations:
    external-dns.home.arpa/enabled: "true"
    auth.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "mdi:computer-classic"
    hajimari.io/group: "Nodes"
spec:
  ingressclassName: nginx
  rules:
    - host: &host "k8s-2.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-2
                port:
                  number: 10000
  tls:
    - hosts:
        - *host
      secretName: k8s-2-staging-tls
